--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.162.0",
     "next": "13.3.0",
+    "plaiceholder": "^2.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
