--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.4",
     "lucide-react": "^0.162.0",
     "next": "13.3.0",
     "plaiceholder": "^2.5.0",
