--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@plaiceholder/next": "^2.5.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.4",
     "lucide-react": "^0.162.0",
