--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss": "^8.4.22",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
+    "tailwind-merge": "^1.13.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4"
   }
